--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "renessans",
+  "name": "ranestam",
   "version": "1.0.0",
-  "description": "Renessans website",
+  "description": "Anton Ranestam portfolio",
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "babel-preset-es2015": "^6.1.18",
